--- a/info/templates/category.html
+++ b/info/templates/category.html
@@ -26,7 +26,7 @@
             <div class="container px-5 my-5">
                 <div class="text-center mb-5">
                     <h2 class="fw-bolder">Our Apps</h2>
-                    <p class="lead mb-0">With our no hassle pricing plans</p>
+                    <p class="lead mb-0"></p>
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <!-- Pricing card free-->
